# telegram-chats-manager

./: .gitignore  README.md  config.example.toml  pyproject.toml
.github/workflows/: codecov.yaml
src/: config.py  database_api.py  exceptions.py  main.py  models.py  telegram.py
tests/: test_config.py
tests/test_database_api/: test_closing_database_api_client.py  test_database_api_service.py
tests/test_models/: test_chat.py  test_telegram_chat.py
tests/test_telegram/: test_closing_telegram_api_client.py  test_telegram_api_service.py
