[tool.poetry]
name = "telegram-chats-manager"
version = "0.1.0"
description = ""
authors = ["Eldos <eldos.baktybekov@gmail.com>"]
readme = "README.md"
packages = [{include = "telegram_chats_manager"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.23.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
coverage = "^7.2.0"
pytest-httpx = "^0.21.3"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = [
    "src",
]
